home page styling

--- a/front-end/public/locales/en/common.json
+++ b/front-end/public/locales/en/common.json
@@ -42,7 +42,8 @@
             "description": "We operate state-of-the-art garages in strategic locations to serve your needs efficiently.",
             "size": "Size",
             "place": "Place",
-            "noAvailable": "No garages available"
+            "noAvailable": "No garages available",
+            "cars": "Number of cars"
         },
         "values": {
             "title": "Why Choose Us?",
